<resources>
    <string name="app_name">Origami Zoo</string>
	<string name="action_help">Instructions</string>
	<string name="action_about">About</string>
	<string name="about_version">Version %1$s</string>
	<string name="about_copyright">&#169; Copyright 2012 Mobile and Wireless Systems Lab of IT-park of Petrozavodsk State University (member of FRUCT association).</string>
	<string name="about_grant">The application is the part of grant KA179 of Karelia ENPI CBC programme, which is co-funded by the European Union, the Russian Federation and the Republic of Finland.</string>
	<string name="about_source">Thanks Origami Fun (origami-fun.com) project for origami diagrams. \n\nSystembar tint. Copyright 2013 readyState Software Limited. Licensed under Apache 2.0 license</string>
    <string name="instruction_swipe">Swipe instructions left and right</string>
	<string name="ok">OK</string>
	<string name="list_item_steps">Steps:&#160;%1$d</string>
	<string name="finished">Finished!</string>
	<string name="level">Comlpexity:&#160;</string>
	<string name="inst_crease">Crease line</string>
	<string name="inst_valley_fold">Valley fold</string>
	<string name="inst_fold_in_direction">Fold in this direction</string>
	<string name="inst_fold_unfold">Fold and unfold</string>
	<string name="inst_mountain_fold">Mountain fold</string>
	<string name="inst_turn_over">Turn over</string>
	<string name="inst_rotate">Rotate</string>
	<string name="inst_blow_up">Blow up</string>
	<string-array name="figures_names">
		<item>Butterfly</item>
		<item>Crane</item>
		<item>Ladybug</item>
		<item>Snapper</item>
		<item>Talking Dog</item>
		<item>Twirling Bird</item>
		<item>Bird</item>
		<item>Dragon Head</item>
		<item>Flapping Bird</item>
		<item>Horse</item>
		<item>Jumping Frog</item>
		<item>Owl</item>
		<item>Pelican</item>
		<item>Puffy Bunny</item>
		<item>Sitting Dog</item>
		<item>Tortoise</item>
    </string-array>
	<string name="bird_1">Start with your paper white side up. Fold in half, as shown. The open</string>
	<string name="bird_2">Fold the outside corners into the centre line, and crease well.</string>
	<string name="bird_3">Fold the top triangle backwards.</string>
	<string name="bird_4">Fold the corners of the model in toward the centre, crease well, then open again.</string>
	<string name="bird_5">Bring the highlighted corner up and outward using the crease shown. Then bring the highlighted corner back down toward the centre line and flatten.</string>
	<string name="bird_6">@string/bird_5</string>
	<string name="bird_7">@string/bird_5</string>
	<string name="bird_8">Repeat this step on the opposite corner… the model should now look like this.</string>
	<string name="bird_9">Fold the outermost corners backwards on the angle shown and crease well.</string>
	<string name="bird_10">Mountain fold the model in half. (Fold backwards)</string>
	<string name="bird_11">Rotate the model slightly so you can see the bird forming.</string>
	<string name="bird_12">Make these creases and unfold.</string>
	<string name="bird_13">Using these creases, inside reverse fold to make the head and the tail of the bird. If you have folded the feet at the correct angle (in step 7), the model should stand up. You can refold the feet if you need to.</string>
	<string name="butterfly_1">@string/bird_1</string>
	<string name="butterfly_2">Now Fold the Paper in half diagonally, both ways.</string>
	<string name="butterfly_3">Fold all four corners into the centre and crease well.</string>
	<string name="butterfly_4">@string/butterfly_3</string>
	<string name="butterfly_5">Turn Over and Fold all four corners into the centre again.</string>
	<string name="butterfly_6">@string/butterfly_5</string>
	<string name="butterfly_7">Your creases should look like this. It looks complicated, but don\'t worry!</string>
	<string name="butterfly_8">Fold the outside edges into the centre line.</string>
	<string name="butterfly_9">@string/butterfly_8</string>
	<string name="butterfly_10">Holding each inside edge from the point at the centre, bring these edges out to the points shown.</string>
	<string name="butterfly_11">Then, fold the top edge downwards and flatten.</string>
	<string name="butterfly_12">@string/butterfly_11</string>
	<string name="butterfly_13">Rotate the model, and repeat step 7.</string>
	<string name="butterfly_14">@string/butterfly_13</string>
	<string name="butterfly_15">@string/butterfly_13</string>
	<string name="butterfly_16">Fold the top half backwards and flatten.</string>
	<string name="butterfly_17">Fold down the front outside corners.</string>
	<string name="butterfly_18">Fold these outside corners inward as shown.</string>
	<string name="butterfly_19">Fold the butterfly in half.</string>
	<string name="butterfly_20">Now fold the top layer backwards, at the angle shown.</string>
	<string name="butterfly_21">And now fold the back wing backwards also at the same angle.</string>
	<string name="butterfly_22">@string/butterfly_21</string>
	<string name="butterfly_23">Open out. Your butterfly is complete!.</string>
    <string name="crane_1">Start with a square piece of paper, coloured side up. Fold the top corner of the paper down to the bottom corner. Crease and open again. Then fold the paper in half sideways.</string>
    <string name="crane_2">Turn the paper over to the white side. Fold the paper in half, crease well and open, and then fold again in the other direction.</string>
    <string name="crane_3">Using the creases you have made, Bring the top 3 corners of the model down to the bottom corner. Flatten model.</string>
    <string name="crane_4">@string/crane_3</string>
    <string name="crane_5">@string/crane_3</string>
    <string name="crane_6">Fold top triangular flaps into the centre and unfold.</string>
    <string name="crane_7">Fold top of model downwards, crease well and unfold.</string>
    <string name="crane_8">Open the uppermost flap of the model, bringing it upwards and pressing the sides of the model inwards at the same time. Flatten down, creasing well.</string>
    <string name="crane_9">@string/crane_8</string>
    <string name="crane_10">@string/crane_8</string>
    <string name="crane_11">Turn model over and repeat Steps 4–6 on the other side.</string>
    <string name="crane_12">Fold top flaps into the centre.</string>
    <string name="crane_13">@string/crane_12</string>
    <string name="crane_14">Repeat on other side, so your model looks like this.</string>
    <string name="crane_15">Fold both ‘legs’ of model up, crease very well, then unfold.</string>
    <string name="crane_16">@string/crane_15</string>
    <string name="crane_17">Inside Reverse Fold the “legs” along the creases you just made.</string>
    <string name="crane_18">Inside Reverse Fold one side to make a head, then fold down the wings.</string>
    <string name="crane_19">@string/crane_18</string>
    <string name="dragon_head_1">Start with a square piece of paper, coloured side up. Fold in half in 2 directions.</string>
    <string name="dragon_head_2">Turn the paper over to the white side. Fold the paper in half, crease well and open, and then fold again in the other direction.</string>
    <string name="dragon_head_3">Using the creases you have made, Bring the top 3 corners of the model down to the bottom corner. Flatten model.</string>
    <string name="dragon_head_4">@string/dragon_head_3</string>
    <string name="dragon_head_5">@string/dragon_head_3</string>
    <string name="dragon_head_6">Fold the bottom corner upwards to the top corner.</string>
    <string name="dragon_head_7">Fold the uppermost outer corners toward the centre line.</string>
    <string name="dragon_head_8">Now Fold the top corner down.</string>
    <string name="dragon_head_9">@string/dragon_head_8</string>
    <string name="dragon_head_10">Turn model over and repeat steps 4–6 on the other side.</string>
    <string name="dragon_head_11">@string/dragon_head_10</string>
    <string name="dragon_head_12">@string/dragon_head_10</string>
    <string name="dragon_head_13">@string/dragon_head_10</string>
    <string name="dragon_head_14">Now the dragon’s head is folded, all you need to do is pop it open!</string>
    <string name="dragon_head_15">Open it out by gently pulling it apart from the sides, as shown.</string>
    <string name="dragon_head_16">@string/dragon_head_15</string>
    <string name="flapping_bird_1">Start with a square piece of paper, coloured side up. Fold in half twice as shown to create these creases.</string>
    <string name="flapping_bird_2">Turn the paper over to the white side. Fold the paper in half, crease well and open, and then fold again in the other direction.</string>
    <string name="flapping_bird_3">Using the creases you have made, Bring the top 3 corners of the model down to the bottom corner. Flatten model.</string>
    <string name="flapping_bird_4">@string/flapping_bird_3</string>
    <string name="flapping_bird_5">@string/flapping_bird_3</string>
    <string name="flapping_bird_6">Fold top triangular flaps into the centre and unfold.</string>
    <string name="flapping_bird_7">Fold top of model downwards, crease well and unfold.</string>
    <string name="flapping_bird_8">Open the uppermost flap of the model, bringing it upwards and pressing the sides of the model inwards at the same time. Flatten down, creasing well.</string>
    <string name="flapping_bird_9">@string/flapping_bird_8</string>
    <string name="flapping_bird_10">@string/flapping_bird_8</string>
    <string name="flapping_bird_11">Turn model over and repeat Steps 4–6 on the other side.</string>
    <string name="flapping_bird_12">@string/flapping_bird_11</string>
    <string name="flapping_bird_13">Fold “legs” upward along the outside edges, then open again.</string>
    <string name="flapping_bird_14">@string/flapping_bird_13</string>
    <string name="flapping_bird_15">@string/flapping_bird_13</string>
    <string name="flapping_bird_16">Use the creases just made to inside reverse fold these parts.</string>
    <string name="flapping_bird_17">@string/flapping_bird_16</string>
    <string name="flapping_bird_18">Inside reverse fold the head, and fold down the wings as shown. Then partially open them up again.</string>
    <string name="flapping_bird_19">@string/flapping_bird_18</string>
    <string name="flapping_bird_20">To make the wings flap forward, pull the tail.</string>
    <string name="horse_1">Start with a square piece of paper, coloured side up. Fold the paper in half, crease well and open, and then fold again in the other direction.</string>
    <string name="horse_2">Turn the paper over to the white side. Fold the paper in half, crease well and open, and then fold again in the other direction. Your creases should look like this.</string>
    <string name="horse_3">Using the creases you have made, Bring the top 3 corners of the model down to the bottom corner. Flatten model.</string>
    <string name="horse_4">@string/horse_3</string>
    <string name="horse_5">@string/horse_3</string>
    <string name="horse_6">Fold upper layer’s outside corners toward centre line, then fold the top downward along the crease shown. Unfold.</string>
    <string name="horse_7">Cut only top layer up to the top crease.</string>
    <string name="horse_8">Fold the “legs” upwards along the creases shown.</string>
    <string name="horse_9">Fold these sections in half, toward the centre.</string>
    <string name="horse_10"> Fold these sections in half, toward the centre.</string>
    <string name="horse_11">Turn model over and repeat steps 4–7 on other side. The model should now look like this.</string>
    <string name="horse_12">Rotate model and make creases as shown. Unfold.</string>
    <string name="horse_13">Inside Reverse Fold the head and the tail.</string>
    <string name="horse_14">To make the horse do a somersault, sharply tap upwards under his tail.</string>
</resources>