<?xml version="1.0" encoding="utf-8"?>

<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true">

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="10dp">

		<TextView
			android:id="@+id/about_title"
			android:gravity="center_horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="55sp"
			android:text="@string/app_name"/>

		<ImageView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_launcher"/>

		<TextView
			android:id="@+id/about_version"
			style="@style/AboutText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/about_version"/>

		<TextView
			style="@style/AboutText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/about_copyright"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/about_grant"
			style="@style/AboutText"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/about_source"
			style="@style/AboutText"/>

	</LinearLayout>

</ScrollView>