<?xml version="1.0" encoding="utf-8"?>

<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true">

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="10dp">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical">

			<ImageView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:src="@drawable/symbol_gray_line"
				android:layout_weight="1"
				android:layout_margin="15dp"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/inst_crease"
				style="@style/AboutText"/>

		</LinearLayout>


		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical">

			<ImageView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:src="@drawable/symbol_dotted"
				android:layout_weight="1"
				android:layout_margin="15dp"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/inst_valley_fold"
				style="@style/AboutText"/>

		</LinearLayout>


		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical">

			<ImageView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:src="@drawable/symbol_fold"
				android:layout_weight="1"
				android:layout_margin="15dp"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/inst_fold_in_direction"
				style="@style/AboutText"/>

		</LinearLayout>


		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical">

			<ImageView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:src="@drawable/symbol_fold_unfold"
				android:layout_weight="1"
				android:layout_margin="15dp"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/inst_fold_unfold"
				style="@style/AboutText"/>

		</LinearLayout>


		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical">

			<ImageView
				android:layout_width="match_parent"
				android:layout_height="75dp"
				android:src="@drawable/symbol_mountain_fold"
				android:layout_weight="1"
				android:layout_margin="15dp"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/inst_mountain_fold"
				style="@style/AboutText"/>

		</LinearLayout>


		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical">

			<ImageView
				android:layout_width="match_parent"
				android:layout_height="75dp"
				android:src="@drawable/symbol_rotate"
				android:layout_weight="1"
				android:layout_margin="15dp"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/inst_turn_over"
				style="@style/AboutText"/>

		</LinearLayout>


		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical">

			<ImageView
				android:layout_width="match_parent"
				android:layout_height="75dp"
				android:src="@drawable/symbol_rotate90"
				android:layout_weight="1"
				android:layout_margin="15dp"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/inst_rotate"
				style="@style/AboutText"/>

		</LinearLayout>


		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical">

			<ImageView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:src="@drawable/symbol_air"
				android:layout_weight="1"
				android:layout_margin="15dp"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/inst_blow_up"
				style="@style/AboutText"/>

		</LinearLayout>


	</LinearLayout>

</ScrollView>